Fixed overflow-x bug on the body

--- a/compass/assets/scss/partials/_reset.scss
+++ b/compass/assets/scss/partials/_reset.scss
@@ -51,3 +51,8 @@ input[type="search"] {
 	content: " ";
 	display: table;
 }
+
+html,
+body {
+	overflow-x: hidden;
+}
